--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </nav>
             <div class="header-text">
                 <p>Software Engineer</p>
-                <h1>Hi, I'm <span>Kunal.</span><br>Chawla from India</h1>
+                <h1>Hi, I'm <span>Kunal.</span><br>Chawla from Sweden</h1>
             </div>
         </div>
     </div>
