--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ My interests are diverse, but my core values are consistent: I strive to create 
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>Aug 2023- Current</span><br>Software Development Intern at Volvo Cars,Sweden</li>
+                            <li><span>Jan 2023-Current</span><br>Software Engineering Consultant at Volvo Cars,Sweden</li>
+                            <li><span>Aug 2023-Dec 2023</span><br>Software Development Intern at Volvo Cars,Sweden</li>
                             <li><span>May 2022-July 2022</span><br>Game Development Intern at BornMonkie,India</li>
                             <li><span>Dec 2020-Feb 2022</span><br>Project Intern (Apprenticeship) at Microsoft, India</li>
                         </ul>
