--- a/index.html
+++ b/index.html
@@ -43,15 +43,11 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p class="justify-cont">I am a Software Engineer Consultant at Volvo Cars through DevPort AB, where my tasks involve developing and implementing the OneEngine (OE) solution globally for vehicle Software Download (SWDL) and diagnostic communication in Manufacturing. This work includes testing and developing concepts and scripts used in testing in a car environment.The tests encompass fault tracing, script programming, process prerequisites (work height, work zone, variant, etc.), connecting structure to process steps, time estimation of the process, and utilizing tools. 
+                    <p class="justify-cont">I am a Software Engineer Consultant at Volvo Cars via DevPort AB, specializing in global implementation of the OneEngine (OE) solution for vehicle Software Download (SWDL) and diagnostic communication in Manufacturing. My responsibilities include testing, script development, and optimizing processes in a car environment. I've previously interned at Volvo Cars, leveraging my passion for Artificial Intelligence to create automation solutions for enhanced software quality and process efficiency.
 
-Earlier I worked as a Software Engineer Intern at Volvo Cars, I apply my passion for Artificial Intelligence and Software Development to create cutting-edge automation solutions that drive software quality and process efficiency. I am proficient in system requirements analysis, test automation, and fault-free HiL setups, using technologies such as Python, Github, Docker, Vector, Victoria, Kubernetes, Jenkins, Gerrit, Jira, Confluence, CAPL, and CANOe.
+As a B.Tech. Computer Science student at Chandigarh University, I focus on Artificial Intelligence and Machine Learning, expecting to graduate in 2024 with a C.G.P.A of 8.55. My academic achievements include certifications from Microsoft, Duke University, and Shaw Academy, along with 7 scopus indexed research papers. I've participated in competitions like SIH 2022, securing the college runner-up position.
 
-I am a B.Tech. Computer Science student with a specialization in Artificial Intelligence and Machine Learning from Chandigarh University, Gharuan, Punjab, with a C.G.P.A of 8.55, expected to graduate in 2024. My strong academic background includes multiple certifications from Microsoft, Duke University, and Shaw Academy along with that I have 7 scopus indexed research papers published in renowned journals. I have participated in various competitions and hackathons, such as SIH 2022, where I was the college runner-up.
-
-In addition to my academic and professional pursuits, I am the founder of Designamo Design House, a seed business idea nurtured with my passion for graphic design and software development. I am also a part-time YouTuber and a fitness enthusiast, always eager to learn new things and challenge myself.
-
-My commitment is to contribute innovative and efficient solutions to make a meaningful difference in the world, reflecting my dedication and hard work while also upholding my core values.</p>
+Beyond academia and work, I founded Designamo Design House, blending graphic design and software development. Additionally, I am a part-time YouTuber, fitness enthusiast, and committed to contributing innovative solutions that make a meaningful impact on the world.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="openTab('skills')">Skills</p>
                         <p class="tab-links" onclick="openTab('experience')">Experience</p>
