--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <h1 class="sub-title">About Me</h1>
                     <p class="justify-cont">I am a Software Engineer Consultant at Volvo Cars via DevPort AB, specializing in global implementation of the OneEngine (OE) solution for vehicle Software Download (SWDL) and diagnostic communication in Manufacturing. My responsibilities include testing, script development, and optimizing processes in a car environment. I've previously interned at Volvo Cars, leveraging my passion for Artificial Intelligence to create automation solutions for enhanced software quality and process efficiency.
 
-As a B.Tech. Computer Science student at Chandigarh University, I focus on Artificial Intelligence and Machine Learning, expecting to graduate in 2024 with a C.G.P.A of 8.55. My academic achievements include certifications from Microsoft, Duke University, and Shaw Academy, along with 7 scopus indexed research papers. I've participated in competitions like SIH 2022, securing the college runner-up position.
+As a B.Tech. Computer Science graduate from Chandigarh University, I focus on Artificial Intelligence and Machine Learning,with a C.G.P.A of 8.53. My academic achievements include certifications from Microsoft, Duke University, and Shaw Academy, along with 7 scopus indexed research papers. I've participated in competitions like SIH 2022, securing the college runner-up position.
 
 Beyond academia and work, I founded Designamo Design House, blending graphic design and software development. Additionally, I am a part-time YouTuber, fitness enthusiast, and committed to contributing innovative solutions that make a meaningful impact on the world.</p>
                     <div class="tab-titles">
@@ -70,7 +70,7 @@ Beyond academia and work, I founded Designamo Design House, blending graphic des
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>2020-Present</span><br>B.E in Computer Science with  in AI & ML at Chandigarh University </li>
+                            <li><span>2020-2024</span><br>B.E in Computer Science with  in AI & ML at Chandigarh University </li>
                             <li><span>2018-2019</span><br>Senior Secondary at Rajiv International School</li>
                             <li><span>2016-2017</span><br>Secondary at Rajiv International School</li>
                         </ul>
